--- a/app/assets/stylesheets/_settings/_grid.scss
+++ b/app/assets/stylesheets/_settings/_grid.scss
@@ -1,3 +1,5 @@
+@import "../_tools/calc";
+
 // All variables related to the grid, including breakpoints
 
 // For pulling specific breakpoint width values out.
