Updated tests and needed presenter changes for tests

--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -12,6 +12,11 @@
 
   <br>
 
+  <%= f.label :budget %>
+  <%= f.text_field :name, type: 'number', placeholder: "Category budget" %>
+
+  <br>
+
   <%= f.label :description %>
   <%= f.text_area :description, placeholder: "Describe your new category!" %>
 
