--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -15,7 +15,7 @@
 </div>
 
 <h5 class="ba-pt-double">
-  Final Balance: <%= @all_categories.final_balance[:total] %> (<%= @all_categories.final_balance[:state] %>)
+  Final Balance: <%= number_to_currency(@all_categories.final_balance[:total]) %> (<%= @all_categories.final_balance[:state] %>)
 </h5>
 
 
