--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,7 +1,8 @@
-<% provide(:title, "#{@category.name} Category") %>
+<% new_title = @title.gsub('Category', @category.name) %>
+<% provide(:title, new_title ||= "#{@category.name}") %>
 
 <h1>
-  <%= @category.name %>
+  <%= yield(:title) %>
 </h1>
 
 <h3>
