Added expenses controller and form to add new ones

--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -27,6 +27,11 @@
 
         <br>
 
+        <%= f.label :expense %>
+        <%= f.check_box :expense %>
+
+        <br>
+
         <%= f.submit 'Update' %>
 
         <%= link_to "Delete", category, method: :delete, data: { confirm: "You sure?" }, class: "delete_category" %>
