--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,5 +15,9 @@
     <% end %>
 
     <%= yield %>
+
+    <p>
+      <%= link_to "Add an expense", "/expenses/new/" %>
+    </p>
   </body>
 </html>
