Small test updates

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -35,4 +35,8 @@
 
 <hr>
 
+<%= link_to "Add expense to this category and month specifically?", "javascript:void(0);" %>
+
+<br>
+
 <%= link_to "Back to Month's Budget", @category.month_link %>
