--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,4 +4,9 @@
   Homepage!
 </h1>
 
-<%= link_to "Categories!", categories_url %>
+<ul>
+  <li>
+    <%= link_to "All budget months!", '/all-months' %>
+  </li>
+</ul>
+
