Updated link paths

--- a/app/views/categories/month.html.erb
+++ b/app/views/categories/month.html.erb
@@ -25,9 +25,12 @@
 
 <div class="ba-pt-double">
   <p>
-    <%= link_to "Add a new category!", "/categories/new/" %>
+    <%= link_to "All months", all_months_path %>
   </p>
   <p>
-    <%= link_to "Edit your categories!", "/categories/edit/" %>
+    <%= link_to "Add a new category!", new_category_path %>
+  </p>
+  <p>
+    <%= link_to "Edit your categories!", categories_edit_path %>
   </p>
 </div>
