--- a/app/assets/stylesheets/_display/_typography.scss
+++ b/app/assets/stylesheets/_display/_typography.scss
@@ -5,7 +5,7 @@ body { font-family: type(font-family, base); }
 code,
 kbd { font-family: type(font-family, mono); }
 
-.zz-italic { font-style: italic; }
+#{$g-nmsp}-italic { font-style: italic; }
 
 @each $header in $header-els {
   #{$header} { font-family: type(font-family, header); }
