--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -30,7 +30,7 @@
 </h4>
 
 <h4>
-  Category Balance: <%= number_to_currency(@category.balance[:total]) %> (<%= @category.balance[:state] %>)
+  Category Balance: <%= number_to_currency(@category.balance_total) %> (<%= @category.balance_state %>)
 </h4>
 
 <hr>
