Refactored month view for new services

--- a/app/views/categories/_multi_category_summary.html.erb
+++ b/app/views/categories/_multi_category_summary.html.erb
@@ -2,11 +2,11 @@
 
 <%= content_tag :div, class: classes do %>
   <h3>
-    <%= categories[:type].pluralize(categories[:type]) %>
+    <%= categories.type_p %>
   </h3>
 
   <ul>
-    <% categories[:all].each do |category| %>
+    <% categories.categories.each do |category| %>
       <li>
         <%= link_to category.name, "/categories/#{category.date_link}" %> (<%= number_to_currency(category.balance_total) %>, <%= category.balance_state %>) - <%= category.description %>
         </li>
@@ -14,14 +14,14 @@
   </ul>
 
   <h5>
-    Total: <%= number_to_currency(categories[:total]) %>
+    Total: <%= number_to_currency(categories.total) %>
   </h5>
 
   <h5>
-    Expected: <%= number_to_currency(categories[:expected]) %>
+    Budget: <%= number_to_currency(categories.budget) %>
   </h5>
 
   <h5>
-    Balance: <%= number_to_currency(categories[:balance]) %>
+    Balance: <%= number_to_currency(categories.balance) %>
   </h5>
 <% end %>
