--- a/app/views/categories/month.html.erb
+++ b/app/views/categories/month.html.erb
@@ -5,61 +5,12 @@
 </h1>
 
 <div class="ba-flex ba-flex-wrap ba-flex-nowrap-md">
-  <% if @expenses.categories.length > 0 %>
-
-    <div class="ba-flex-item ba-flex-basis-6-md ba-mb-double ba-mb-none-md ba-mr-double-md">
-      <h3>
-        <%= @expenses.type %>
-      </h3>
-
-      <ul>
-        <% @expenses.categories.each do |category| %>
-          <li>
-            <%= link_to category.name, "/categories/#{category.date_link}" %> (<%= number_to_currency(category.balance_total) %>, <%= category.balance_state %>) - <%= category.description %>
-            </li>
-        <% end %>
-      </ul>
-
-      <h5>
-        Total: <%= number_to_currency(@expenses.total) %>
-      </h5>
-
-      <h5>
-        Budget: <%= number_to_currency(@expenses.budget) %>
-      </h5>
-
-      <h5>
-        Balance: <%= number_to_currency(@expenses.balance) %>
-      </h5>
-    </div>
+  <% if @monthly.expenses.categories.length > 0 %>
+    <%= render 'multi_category_summary', categories: @monthly.expenses, classes: "ba-flex-item ba-flex-basis-6-md ba-mb-double ba-mb-none-md ba-mr-double-md" %>
   <% end %>
 
-    <% if @incomes.categories.length > 0 %>
-    <div class="ba-flex-item ba-flex-basis-6-md">
-      <h3>
-        <%= @incomes.type %>
-      </h3>
-
-      <ul>
-        <% @incomes.categories.each do |category| %>
-          <li>
-            <%= link_to category.name, "/categories/#{category.date_link}" %> (<%= number_to_currency(category.balance_total) %>, <%= category.balance_state %>) - <%= category.description %>
-            </li>
-        <% end %>
-      </ul>
-
-      <h5>
-        Total: <%= number_to_currency(@incomes.total) %>
-      </h5>
-
-      <h5>
-        Budget: <%= number_to_currency(@incomes.budget) %>
-      </h5>
-
-      <h5>
-        Balance: <%= number_to_currency(@incomes.balance) %>
-      </h5>
-    </div>
+  <% if @monthly.incomes.categories.length > 0 %>
+    <%= render 'multi_category_summary', categories: @monthly.incomes, classes: "ba-flex-item ba-flex-basis-6-md" %>
   <% end %>
 </div>
 
