--- a/app/views/categories/_multi_category_summary.html.erb
+++ b/app/views/categories/_multi_category_summary.html.erb
@@ -8,20 +8,20 @@
   <ul>
     <% categories.categories.each do |category| %>
       <li>
-        <%= link_to category.name, "/categories/#{category.date_link}" %> (<%= number_to_currency(category.balance_total) %>, <%= category.balance_state %>) - <%= category.description %>
+        <%= link_to category.name, "/categories/#{category.date_link}" %> (<%= money(category.balance_total) %>, <%= category.balance_state %>) - <%= category.description %>
         </li>
     <% end %>
   </ul>
 
   <h5>
-    Total: <%= number_to_currency(categories.total) %>
+    Total: <%= money(categories.total) %>
   </h5>
 
   <h5>
-    Budget: <%= number_to_currency(categories.budget) %>
+    Budget: <%= money(categories.budget) %>
   </h5>
 
   <h5>
-    Balance: <%= number_to_currency(categories.balance) %>
+    Balance: <%= money(categories.balance) %>
   </h5>
 <% end %>
